03-security-in-transit-tls/01-gateway_https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:  # select a standalone Envoy proxy running on a pod at the edge of service mesh
    istio: ingressgateway # use default istio gateway proxy in `istio-system` namespace, which exposes it using K8s service of LoadBalancer, which creates AWS ELB
  servers: # defines L7 host, port, and protocol
  - port:
      number: 80 # define incoming port
      name: http # label assigned to the port
      protocol: HTTP # define incoming protocol, could be HTTP|HTTPS|GRPC|HTTP2|MONGO|TCP|
    hosts: # hosts exposed by this gateway
    - "thearaseng.com"
  - port: # server config for HTTPS
      number: 443
      name: https # label assigned to this port
      protocol: HTTPS # MUST BE one of HTTP|HTTPS|GRPC|HTTP2|MONGO|TCP|TLS. TLS implies the connection will be routed based on the SNI header to the destination without terminating the TLS connection. Ref: https://istio.io/latest/docs/reference/config/networking/gateway/#Port
    hosts:
    - "thearaseng.com" # <----- host this gateway will accept for HTTPS port 443
    tls:
      mode: SIMPLE
      credentialName: gateway-cert-aws-elb-dns # fetches certs from Kubernetes secret
